basic jdk1.8 changes